# InGENeer

./: .clang-format  .clang-tidy  .editorconfig  .env.example  .gitattributes  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Deep Research on an AI Orchestration Layer for Civil and Mechanical CAD.docx  GEMINI.md  InGENeer.code-workspace  LICENSE  README.md  SECURITY.md
.claude/: settings.json
.claude/agents/: autonomation-governance.md
.cursor/: hooks.json
.cursor/hooks/: notify-session-end.sh  notify-subagent-stop.sh
.cursor/rules/: autonomation-architecture.mdc  preferred-desktop-tooling.mdc
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
AutonomAtIon/: AUTONOMATION_SYSTEM_ARCHITECTURE_RULES.md  LAYERED_PRACTICE_PLAYBOOK.md
apps/desktop/: README.md
audit_logs/: unknown_20260409_080943.jsonl  unknown_20260409_081015.jsonl
docs/: AI_ASSISTANT_BEST_PRACTICES.md  BRIDGE_TRANSPORT.md  CARLSON_API_RESEARCH.md  DEV_SETUP.md  INTENT_COMMAND_API_REFERENCE.md  INTENT_COMMAND_CATALOG.md  MODEL_LANGUAGE_ROUTING.md  PARENT_DEV_MONOREPO.md  REPOSITORY_SETUP.md  WORKSPACE_SCOPE_MAP.md  WORKSPACE_STANDARDS.md  handoff.md
docs/adr/: ADR-0001-platform-topology-monorepo.md  ADR-0002-clean-sheet-knowledge-first.md  ADR-0003-entity-authority-system.md  ADR-0004-orchestrate-first-ai.md  ADR-0005-v1-wedge.md  ADR-0006-market-open-core.md  ADR-0007-local-first-inference.md  ADR-0008-carlson-bridge.md  ADR-0009-project-container-sync.md  ADR-0010-us-only-v1.md  ADR-0011-geometry-stack.md  ADR-0012-custom-tin-engine.md  ADR-0013-survey-core-engines.md  ADR-0014-languages.md  ADR-0015-metal-first-rendering.md  ADR-0016-swiftui-metal-ui.md  ADR-0017-decision-based-flywheel.md  ADR-0018-oda-dwg-codec.md  ADR-0019-monorepo-layout-migration.md  ADR-0020-oda-terms-verification.md  ADR-0021-open-core-license-apache-2.0.md  ADR-0022-stage1-relocation-ruling.md  ADR-0023-totali-oracle-discipline.md  ADR-0024-stage2-component-triage.md  ADR-0025-swift-cpp-interop-direct-c-abi.md  ADR-0026-licensed-professional-identity.md  ADR-0027-baseline-freeze-protocol.md  ADR-0028-out-of-core-pointcloud-octree.md  README.md
docs/architecture/: ARCHITECTURE.md  ASSUMPTIONS.md  CONSTRAINTS.md  GLOSSARY.md  MIGRATION_PLAN.md  REQUIREMENTS.md  RISK_REGISTER.md  project_state.json
docs/drift/: DRIFT-20260611-stage1-relocation-timing.md  DRIFT_TEMPLATE.md  README.md
docs/roadmap/: WORKTREE_INDEX.md
docs/specs/: feature_list.json
docs/workspaces/: InGENeer.agentic-planning.code-workspace  InGENeer.automation-rules.code-workspace  InGENeer.contracts-and-schemas.code-workspace  InGENeer.docs-and-architecture.code-workspace  InGENeer.icad-addin-host.code-workspace  InGENeer.orchestrator-python.code-workspace  InGENeer.repo-ops.code-workspace  README.md
icad-addin/: Directory.Build.props  InGENeer.IcadAddin.slnx  README.md
icad-addin/InGENeer.Bridge.LoopbackHost/: InGENeer.Bridge.LoopbackHost.csproj  Program.cs
icad-addin/InGENeer.IcadBridge/: BridgeExecutionResult.cs  BridgeHttpTransport.cs  CadIntentEnvelope.cs  ICadHostExecutor.cs  IPathResolver.cs  InGENeer.IcadBridge.csproj  IntentRouter.cs  MockCadHost.cs  ModelFingerprintStore.cs  TeighaCadHost.cs
icad-addin/InGENeer.IcadBridge.Tests/: InGENeer.IcadBridge.Tests.csproj  IntentRouterTests.cs
libs/: CMakeLists.txt  README.md
libs/audit_core/: CMakeLists.txt
libs/audit_core/fuzz/: fuzz_canonical.cpp  fuzz_jsonl.cpp  standalone_main.cpp
libs/audit_core/include/ingeneer/audit/: canonical.hpp  error.hpp  event.hpp  jsonl.hpp  sha256.hpp  store.hpp
libs/audit_core/src/: canonical.cpp  jsonl.cpp  sha256.cpp  store.cpp
libs/audit_core/tests/: check.hpp  test_agent_chain.cpp  test_authority.cpp  test_canonical.cpp  test_chain.cpp  test_concurrency.cpp  test_jsonl.cpp  test_property_authority.cpp  test_roundtrip_python.py  test_sha256.cpp
libs/audit_core/tools/: chain_roundtrip_tool.cpp
libs/geometry_core/: CMakeLists.txt
libs/geometry_core/include/ingeneer/geom/: numeric_policy.h  predicates.h
libs/geometry_core/src/: predicates.cpp
libs/geometry_core/tests/: test_numeric_policy.cpp  test_predicates.cpp  test_predicates_fuzz.cpp  test_third_party_smoke.cpp
libs/surface_core/: BENCHMARKS.md  CMakeLists.txt
libs/surface_core/bench/: bench_tin.cpp
libs/surface_core/fuzz/: fuzz_tin.cpp  standalone_main.cpp
libs/surface_core/include/ingeneer/surface/: contour.h  kernel_assert.h  tin.h  volume.h
libs/surface_core/src/: contour.cpp  tin.cpp  tin_breakline.cpp  volume.cpp
libs/surface_core/tests/: check.hpp  test_contour.cpp  test_tin_audit.cpp  test_tin_basic.cpp  test_tin_breakline.cpp  test_tin_oracle.cpp  test_volume.cpp
libs/surface_core/tests/fixtures/oracle/: totali-corpus-500pt-cv-v1.txt  totali-corpus-500pt-v1.txt
orchestrator/: README.md  pyproject.toml
orchestrator/src/ingenieer/: __init__.py  audit.py  audit_reader.py  batch.py  bridge_client.py  cli.py  contracts.py  icad_bridge_transport.py  intent_validation.py  models.py  orchestrator.py  wire.py
orchestrator/tests/: test_audit.py  test_audit_reader.py  test_batch.py  test_bridge_client.py  test_cli.py  test_config_loaders.py  test_contract_sync.py  test_contracts.py  test_intent_generator.py  test_intent_validation.py  test_orchestrator.py  test_orchestrator_http.py  test_roundtrip_integration.py  test_session_harness.py  test_wire.py
research/: README.md
research/auracad/: README.md  audit-chain-design.md  cogo-semantics.md  cxx-agentic-rules.md  numeric-policy.md  predicates-state.md
research/ingeneer-legacy/: orchestrator-lessons.md
research/totali/: EXTRACTION.md  ORACLE_FIXTURE_PROCEDURE.md
schemas/: cad_intent_envelope.schema.json  project_contract.schema.json
schemas/params/: AnalyzeStormDrainage.schema.json  BalanceGrading.schema.json  CreateAlignment.schema.json  CreateCorridorModel.schema.json  CreateCrossSection.schema.json  CreatePavingArea.schema.json  NoOp.schema.json  (+12 more)
scripts/: bootstrap_worktrees.sh  copy_schema_handoff.sh  verify_gate.sh
(+44 files in other folders)
