[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ingenieer"
version = "0.1.0"
description = "InGENeer orchestrator: intent validation, audit chain, CAD bridge wire contracts (AutonomAtIon)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ingenieer-run = "ingenieer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
