[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ingenieer"
version = "0.1.0"
description = "InGENeer orchestrator: intent validation, audit chain, CAD bridge wire contracts (AutonomAtIon)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.5",
    "jsonschema>=4.20",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.8"]

[project.scripts]
ingenieer-run = "ingenieer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (slower, requires external binaries)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Match legacy line breaks in orchestrator; prefer wrapping new code near 100 cols.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ingenieer"]
